changing it to httpsurlconnection